// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPackages() bolt matches snapshot 1`] = `
Array [
  Object {
    "location": "<cwd>/fixture/bolt/packages/bar",
    "package": Object {
      "name": "bar-workspace-package",
      "version": "1.0.0",
    },
  },
  Object {
    "location": "<cwd>/fixture/bolt/packages/foo",
    "package": Object {
      "name": "foo-workspace-package",
      "version": "1.0.0",
    },
  },
]
`;

exports[`getPackages() lerna matches snapshot 1`] = `
Array [
  Object {
    "location": "<cwd>/fixture/lerna/packages/bar",
    "package": Object {
      "name": "bar",
    },
  },
  Object {
    "location": "<cwd>/fixture/lerna/packages/foo",
    "package": Object {
      "name": "foo",
    },
  },
]
`;

exports[`getPackages() yarn 1.4.2+ matches snapshot 1`] = `
Array [
  Object {
    "location": "<cwd>/fixture/yarn-2/packages/bar",
    "package": Object {
      "name": "bar",
      "version": "0.0.0",
    },
  },
  Object {
    "location": "<cwd>/fixture/yarn-2/packages/foo",
    "package": Object {
      "name": "foo",
      "version": "0.0.0",
    },
  },
  Object {
    "location": "<cwd>/fixture/yarn-2/package-2",
    "package": Object {
      "name": "package-2",
      "version": "0.0.0",
    },
  },
]
`;

exports[`getPackages() yarn matches snapshot 1`] = `
Array [
  Object {
    "location": "<cwd>/fixture/yarn/packages/bar",
    "package": Object {
      "name": "bar",
      "version": "0.0.0",
    },
  },
  Object {
    "location": "<cwd>/fixture/yarn/packages/foo",
    "package": Object {
      "name": "foo",
      "version": "0.0.0",
    },
  },
  Object {
    "location": "<cwd>/fixture/yarn/package-2",
    "package": Object {
      "name": "package-2",
      "version": "0.0.0",
    },
  },
]
`;
